src/objects/Apttus_Config2__ConfigSmartSearchSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Smart Search Settings</description>
    <fields>
        <fullName>Apttus_Config2__CurrentSyncStatus__c</fullName>
        <description>Sync status will be one of the following: INITIAL SYNC, SYNC IN PROGRESS, LAST SYNC SUCCESS, LAST SYNC FAILURE</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sync status will be one of the following: INITIAL SYNC, SYNC IN PROGRESS, LAST SYNC SUCCESS, LAST SYNC FAILURE</inlineHelpText>
        <label>Current Sync Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastAttemptedSync__c</fullName>
        <description>Last datetime of attempted sync job</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Last datetime of attempted sync job</inlineHelpText>
        <label>Last Attempted Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastSuccessfulSync__c</fullName>
        <description>Datetime of last successful sync</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Datetime of last successful sync</inlineHelpText>
        <label>Last Successful Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchEnvironment__c</fullName>
        <description>Supported search environments:
SOLR
AZURE</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Supported search environments:
SOLR
AZURE</inlineHelpText>
        <label>Search Environment</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SyncHasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SyncMessage__c</fullName>
        <description>Success or failure message for the sync</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Success or failure message for the sync</inlineHelpText>
        <label>Sync Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Typeahead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to determine which row will be used for typeahead</description>
        <inlineHelpText>Checkbox used to determine which row will be used for typeahead</inlineHelpText>
        <label>Typeahead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Weightage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Weightage</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Config Smart Search Settings</label>
</CustomObject>